--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "app": "*",
     "expo": "^48.0.0",
+    "expo-dev-client": "~2.2.1",
+    "expo-image": "^1.2.3",
     "expo-linking": "~4.0.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
@@ -22,7 +24,7 @@
     "typescript": "^4.9.4"
   },
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
