--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -13,9 +13,14 @@
   },
   "dependencies": {
     "@expo/next-adapter": "5.0.2",
+    "@expo/webpack-config": "^18.0.1",
     "app": "*",
     "next": "13.2.4",
+    "next-compose-plugins": "^2.2.1",
+    "next-fonts": "^1.5.1",
+    "next-transpile-modules": "^10.0.0",
     "raf": "^3.4.1",
+    "react-native-web-hooks": "^3.0.2",
     "setimmediate": "^1.0.5"
   },
   "devDependencies": {
