Fix: PlayButton web compatibility

--- a/package.json
+++ b/package.json
@@ -21,9 +21,5 @@
   "engines": {
     "node": ">=16.0.0 <17.0.0"
   },
-  "packageManager": "yarn@3.4.1",
-  "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "react-query": "^3.39.3"
-  }
+  "packageManager": "yarn@3.4.1"
 }
