--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "app": "*",
     "expo": "^48.0.0",
+    "expo-av": "^13.2.1",
     "expo-dev-client": "~2.2.1",
     "expo-image": "^1.2.3",
     "expo-linking": "~4.0.1",
